--- a/style2.css
+++ b/style2.css
@@ -21,19 +21,26 @@ h1 {
 header > a {
   color: white;
   text-decoration: dashed;
-  margin: 5px;
+  padding: 5px;
   /* padding-bottom: 100px; */
   font-size: small;
 }
 .head {
   display: inline-block;
   text-align: right;
-  margin: 10px;
+  padding: 10px;
   text-align: left;
 }
 .head2 {
   display: inline-block;
   /* padding-left: 675px; */
+  background-color: #606060;
+}
+
+.head1:hover {
+  background-color: #606060;
+}
+.head3:hover {
   background-color: #606060;
 }
 main {
@@ -46,7 +53,7 @@ footer {
   width: 100%;
   height: 50px;
   padding-left: 500px;
-  margin-top: 300px;
+  margin-top: 500px;
 }
 footer > p {
   display: inline-block;
@@ -62,16 +69,19 @@ footer > p {
 .img {
   width: 100px;
   margin-top: 50px;
-  margin-left: 150px;
+  margin-left: 62.5%;
 }
 img {
   width: 300px;
-  margin-left: 425px;
-  padding-top: 80px;
+
+  padding-top: 100px;
+  padding-right: 50px;
 }
 .find2 {
   display: inline-block;
-  width: 49%;
+  width: 48%;
+
+  margin-left: 50%;
 }
 .h3 > h3 {
   display: inline-block;
