--- a/style3.css
+++ b/style3.css
@@ -10,7 +10,6 @@ header {
   width: 100%;
   height: 50px;
   padding-top: 10px;
-  position: absolute;
 }
 h1 {
   font-size: medium;
@@ -22,25 +21,31 @@ h1 {
 header > a {
   color: white;
   text-decoration: dashed;
-  margin: 5px;
+  padding: 5px;
   /* padding-bottom: 100px; */
   font-size: small;
 }
 .head {
   display: inline-block;
   text-align: right;
-  margin: 10px;
+  padding: 10px;
   text-align: left;
-  position: relative;
 }
 .head3 {
   display: inline-block;
   /* padding-left: 675px; */
   background-color: #606060;
 }
+
+.head1:hover {
+  background-color: #606060;
+}
+.head2:hover {
+  background-color: #606060;
+}
 main {
   background-position: center;
-  padding-left: 350px;
+  margin-left: 100px;
 }
 footer {
   display: inline-block;
@@ -49,7 +54,7 @@ footer {
   width: 100%;
   height: 50px;
   padding-left: 500px;
-  margin-top: 300px;
+  margin-top: 500px;
 }
 footer > p {
   display: inline-block;
