--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ hr {
   height: 10px;
   background-color: #03503c;
   width: 100px;
-  margin-left: 50%;
+  margin-left: 775px;
   border-color: #03503c;
 }
 .photo2 > p {
