--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,7 @@
 }
 
 header {
-  background-color: rgb(54, 53, 52);
+  background-color: #333333;
   position: fixed;
   width: 100%;
   height: 50px;
@@ -34,17 +34,18 @@ header > a {
 .head2 {
   display: inline-block;
   /* padding-left: 675px; */
-  background-color: #606060;
+  background-color: #444444;
 }
 
 .head1:hover {
-  background-color: #606060;
+  background-color: #444444;
 }
 .head3:hover {
-  background-color: #606060;
+  background-color: #444444;
 }
 main {
   background-position: center;
+  padding-top: 150px;
 }
 footer {
   display: inline-block;
@@ -62,26 +63,19 @@ footer > p {
   text-align: center;
 }
 .find {
-  width: 50%;
   display: inline-block;
-  height: 10px;
-}
-.img {
-  width: 100px;
-  margin-top: 50px;
-  margin-left: 62.5%;
+  width: 50%;
+  padding-left: 33%;
+  padding-top: 20px;
+  margin-right: 5px;
 }
 img {
   width: 300px;
-
-  padding-top: 100px;
-  padding-right: 50px;
 }
 .find2 {
   display: inline-block;
-  width: 48%;
-
-  margin-left: 50%;
+  width: 49%;
+  margin-left: 2.5px;
 }
 .h3 > h3 {
   display: inline-block;
@@ -99,16 +93,18 @@ img {
   display: inline-block;
   font-size: 0.8em;
   margin-top: 6px;
-  text-decoration: solid;
+  text-decoration: solid black;
   margin-bottom: 5px;
   padding-left: 50px;
   margin-left: 100px;
+  padding-bottom: 10px;
 }
 .h5 {
   padding-right: 10px;
   font-size: 0.8em;
   padding-bottom: 10px;
   margin-left: 100px;
+  padding-bottom: 10px;
 }
 .p {
   font-size: 0.6em;
@@ -116,7 +112,7 @@ img {
   margin-left: 50px;
 }
 .qtr {
-  background-color: blueviolet;
+  background-color: rgb(188, 32, 188);
   color: white;
   border-radius: 100px;
   padding-left: 6px;
@@ -125,7 +121,7 @@ img {
   margin-right: 2px;
 }
 .onz {
-  background-color: brown;
+  background-color: rgb(129, 59, 8);
   color: white;
   border-radius: 100px;
   padding-left: 6px;
