--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ footer {
   color: white;
   width: 100%;
   height: 50px;
-  padding-left: 500px;
+  padding-left: 5px;
   margin-top: 100px;
 }
 footer > p {
@@ -186,4 +186,117 @@ footer > p {
   margin-top: 10px;
   padding-left: 400px;
   text-align: center;
+}
+/* smartphone */
+@media (max-width: 500px) {
+  header {
+    text-align: center;
+    height: 175px;
+    padding: 20px;
+  }
+  header > a {
+    margin: 5px;
+    padding: 5px;
+  }
+  .head {
+    margin: 0px;
+    padding: 0px;
+    width: 100px;
+  }
+  .head1,
+  .head2,
+  .head3 {
+    margin: 5px;
+    margin-left: 150px;
+    margin-right: 200px;
+    padding: 5px;
+    width: 75px;
+  }
+  h1 {
+    margin-left: 85px;
+  }
+
+  .photo {
+    background: url(images/bar_opacity.png) center center/cover;
+    height: 50em;
+    padding-top: 175px;
+  }
+  h2 {
+    display: inline-block;
+    font-size: 2.5em;
+    padding: 30px;
+  }
+  p {
+    margin: 5px;
+    padding: 5px;
+    display: inline-block;
+    width: 300px;
+  }
+  .photo > p {
+    font-size: 1.5em;
+  }
+  .div3 {
+    display: none;
+  }
+  .div2 {
+    display: inline-block;
+    padding: 30px;
+  }
+  .concert {
+    padding: 30px;
+    margin: 50px;
+  }
+  .clock {
+    padding: 30px;
+    margin: 20px;
+  }
+  h3 {
+    font: optional;
+    display: inline-block;
+    padding: 5px;
+    width: 400px;
+    margin-left: 40px;
+    padding-right: 200px;
+  }
+  svg {
+    padding: 5px;
+    width: 60px;
+    margin-left: 90px;
+  }
+  .clock2 {
+    margin-left: 100px;
+  }
+  .div2 > p {
+    display: inline-block;
+    padding: 5px;
+    margin: 5px;
+    width: 400px;
+  }
+  .alien {
+    padding: 20px;
+    margin: 50px;
+  }
+  .alien > p {
+    margin-right: 600px;
+    margin-left: 5px;
+    display: inline-block;
+    width: 300px;
+  }
+  .alien > h3 {
+    margin-right: 500px;
+  }
+  .button2 {
+    margin: 5px;
+    padding: 5px;
+    margin-right: 625px;
+  }
+  footer {
+    margin: 20px;
+  }
+  .p2 {
+    margin: 5px;
+    padding-left: 75px;
+    padding-top: 5px;
+    font-size: 0.5em;
+  }
 }
