--- a/style2.css
+++ b/style2.css
@@ -53,7 +53,7 @@ footer {
   color: white;
   width: 100%;
   height: 50px;
-  padding-left: 500px;
+  padding-left: 5px;
   margin-top: 500px;
 }
 footer > p {
@@ -128,4 +128,87 @@ img {
   padding-right: 6px;
   margin-left: 2px;
   margin-right: 2px;
+}
+@media (max-width: 500px) {
+  header {
+    text-align: center;
+    height: 175px;
+    padding: 20px;
+  }
+  header > a {
+    margin: 5px;
+    padding: 5px;
+  }
+  .head {
+    margin: 0px;
+    padding: 0px;
+    width: 100px;
+  }
+  .head1,
+  .head2,
+  .head3 {
+    margin: 5px;
+    margin-left: 150px;
+    margin-right: 200px;
+    padding: 5px;
+    width: 75px;
+  }
+  main {
+    padding-top: 175px;
+  }
+  h1 {
+    margin-left: 85px;
+  }
+  footer {
+    margin: 20px;
+    margin-top: 200px;
+  }
+  .p2 {
+    margin: 5px;
+    padding-left: 150px;
+    padding-top: 10px;
+    font-size: 0.5em;
+  }
+  .find {
+    margin: 5px;
+    padding: 5px;
+  }
+  img {
+    margin: 5px;
+    padding: 5px;
+    margin-left: 85px;
+  }
+  .find2 {
+    margin: 5px;
+    padding: 5px;
+  }
+  h3 {
+    display: inline-block;
+    width: 600px;
+    margin: 5px;
+    padding: 5px;
+    margin-left: 25px;
+  }
+  .h4 {
+    display: inline-block;
+    margin: 5px;
+    padding: 5px;
+    margin-left: 150px;
+    margin-bottom: 0;
+  }
+  .h5 {
+    display: inline-block;
+    width: 300px;
+    margin: 5px;
+    padding: 5px;
+    margin-left: 90px;
+    margin-top: 0;
+  }
+  .p {
+    margin: 5px;
+    padding: 5px;
+    width: 300px;
+    margin-left: 90px;
+    margin-top: 0;
+  }
 }
