--- a/style3.css
+++ b/style3.css
@@ -53,7 +53,7 @@ footer {
   color: white;
   width: 100%;
   height: 50px;
-  padding-left: 500px;
+  padding-left: 5px;
   margin-top: 500px;
 }
 footer > p {
@@ -104,4 +104,61 @@ textarea {
   background-color: white;
   border: 5px solid black;
   color: black;
+}
+@media (max-width: 500px) {
+  header {
+    text-align: center;
+    height: 175px;
+    padding: 20px;
+  }
+  header > a {
+    margin: 5px;
+    padding: 5px;
+  }
+  .head {
+    margin: 0px;
+    padding: 0px;
+    width: 100px;
+  }
+  .head1,
+  .head2,
+  .head3 {
+    margin: 5px;
+    margin-left: 150px;
+    margin-right: 200px;
+    padding: 5px;
+    width: 75px;
+  }
+  main {
+    padding-top: 150px;
+  }
+  h1 {
+    margin-left: 85px;
+  }
+  footer {
+    margin: 20px;
+    margin-top: 200px;
+  }
+  .p2 {
+    margin: 5px;
+    padding-left: 150px;
+    padding-top: 10px;
+    font-size: 0.5em;
+  }
+  .form {
+    margin: 5px;
+    padding: 5px;
+    margin-top: 100px;
+  }
+  .form2 {
+    margin: 5px;
+    padding: 5px;
+  }
+  input {
+    width: 200px;
+    height: 30px;
+  }
+  textarea {
+    width: 300px;
+  }
 }
