--- a/style2.css
+++ b/style2.css
@@ -163,7 +163,8 @@ img {
     margin-left: 85px;
   }
   footer {
-    margin: 20px;
+    padding: 20px;
+    padding-top: 5px;
     margin-top: 200px;
   }
   .p2 {
