--- a/style.css
+++ b/style.css
@@ -250,6 +250,8 @@ footer > p {
   .concert {
     padding: 30px;
     margin: 50px;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
   }
   .clock {
     padding: 30px;
