--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@ footer > p {
     background: url(images/bar_opacity.png) center center/cover;
     height: 50em;
     padding-top: 175px;
+    text-align: center;
   }
   h2 {
     display: inline-block;
@@ -250,17 +251,27 @@ footer > p {
   }
   .div2 {
     display: inline-block;
-    padding: 30px;
+    margin: 30px;
+    text-align: center;
+  }
+  .div4 {
+    display: inline-block;
+    margin: 30px;
+    text-align: center;
   }
   .concert {
-    padding: 30px;
-    margin: 50px;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
+    width: 300px;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 30px;
+    margin-top: 30px;
   }
   .clock {
-    padding: 30px;
-    margin: 20px;
+    width: 300px;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 30px;
+    margin-top: 30px;
   }
   h3 {
     font: optional;
@@ -288,8 +299,8 @@ footer > p {
     width: 400px;
   }
   .alien {
-    padding: 20px;
-    margin: 50px;
+    padding: 0;
+    margin: 0;
   }
   .alien > h3 {
     margin-left: 0;
