--- a/style3.css
+++ b/style3.css
@@ -112,7 +112,7 @@ textarea {
   header {
     text-align: center;
     height: 175px;
-    padding: 20px;
+    padding: 10px;
   }
   header > a {
     margin: 5px;
@@ -133,7 +133,8 @@ textarea {
     width: 75px;
   }
   main {
-    padding-top: 150px;
+    padding-top: 100px;
+    margin-left: 25px;
   }
   h1 {
     margin-left: 85px;
