--- a/style3.css
+++ b/style3.css
@@ -107,7 +107,7 @@ textarea {
 }
 @media (max-width: 500px) {
   body {
-    width: 500px;
+    max-width: 500px;
   }
   header {
     text-align: center;
