--- a/style3.css
+++ b/style3.css
@@ -106,7 +106,7 @@ textarea {
   color: black;
 }
 @media (max-width: 500px) {
-  body {
+  html {
     max-width: 500px;
   }
   header {
@@ -141,13 +141,12 @@ textarea {
   }
   footer {
     padding: 20px;
-    padding-top: 5px;
-    margin-top: 200px;
+    padding-top: 2.5px;
   }
   .p2 {
     margin: 5px;
-    padding-left: 150px;
-    padding-top: 10px;
+    padding-left: 100px;
+    padding-top: 5px;
     font-size: 0.5em;
   }
   .form {
