--- a/style.css
+++ b/style.css
@@ -186,6 +186,7 @@ footer > p {
 @media (max-width: 500px) {
   html {
     max-width: 500px;
+    width: 100%;
   }
   header {
     text-align: center;
