--- a/style3.css
+++ b/style3.css
@@ -108,6 +108,7 @@ textarea {
 @media (max-width: 500px) {
   html {
     max-width: 500px;
+    width: 100%;
   }
   header {
     text-align: center;
