--- a/style.css
+++ b/style.css
@@ -184,7 +184,8 @@ footer > p {
 }
 /* smartphone */
 @media (max-width: 500px) {
-  html {
+  html,
+  body {
     max-width: 500px;
     width: 100%;
   }
