--- a/style2.css
+++ b/style2.css
@@ -130,7 +130,8 @@ img {
   margin-right: 2px;
 }
 @media (max-width: 500px) {
-  html {
+  html,
+  body {
     max-width: 500px;
     width: 100%;
   }
