--- a/style3.css
+++ b/style3.css
@@ -106,7 +106,8 @@ textarea {
   color: black;
 }
 @media (max-width: 500px) {
-  html {
+  html,
+  body {
     max-width: 500px;
     width: 100%;
   }
