--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ footer > p {
   body {
     max-width: 500px;
     width: 100%;
-    position: fixed;
+    position: static;
   }
   header {
     text-align: center;
